[gd_scene load_steps=10 format=2]

[ext_resource path="res://LegendOfZelda/Scripts/Hero.gd" type="Script" id=1]
[ext_resource path="res://LegendOfZelda/Assets/can-of-7up-picture-id531417466.jpg" type="Texture" id=2]
[ext_resource path="res://LegendOfZelda/Scripts/DialogChoices.gd" type="Script" id=3]
[ext_resource path="res://OregonTrail/Fonts/Averia_Serif_Libre/AveriaSerifLibre-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 7 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 6
font_data = ExtResource( 4 )

[node name="7UP" type="Area2D"]
position = Vector2( 60, -150 )
scale = Vector2( 0.2, 0.2 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 115 )
scale = Vector2( 40, 50 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="WitchL1" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="WitchL1"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="WitchL1/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="WitchL1/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 4 )
text = "I used to be the greatest COBBLER in all the land. But these days, I’m feeling a bit frustrated.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="WitchL1/ChoicesBorder/ChoicesBox"]
margin_left = 25.0
margin_top = 50.0
margin_right = 132.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "“What’s got you frustrated?”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="WitchL1/ChoicesBorder/ChoicesBox"]
margin_left = 190.0
margin_top = 50.0
margin_right = 297.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "“I don’t want to talk to you. I want to punch you.”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="WitchL1/ChoicesBorder/ChoicesBox"]
margin_left = 18.0
margin_top = 52.0
margin_right = 20.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="WitchL1/ChoicesBorder/ChoicesBox"]
margin_left = 184.0
margin_top = 52.0
margin_right = 186.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WitchL2" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="WitchL2"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="WitchL2/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="WitchL2/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 4 )
text = "I just can’t seem to make the perfect pair of shoes! I’ve been working forever and they’re still not perfect!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="WitchL2/ChoicesBorder/ChoicesBox"]
margin_left = 25.0
margin_top = 50.0
margin_right = 132.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "“Do they need to be perfect?”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="WitchL2/ChoicesBorder/ChoicesBox"]
margin_left = 190.0
margin_top = 50.0
margin_right = 297.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "“Wow, sounds like you suck at this.”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="WitchL2/ChoicesBorder/ChoicesBox"]
margin_left = 18.0
margin_top = 52.0
margin_right = 20.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="WitchL2/ChoicesBorder/ChoicesBox"]
margin_left = 184.0
margin_top = 52.0
margin_right = 186.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WitchL3" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="WitchL3"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="WitchL3/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="WitchL3/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 4 )
text = "Of course they do! How can I be a great COBBLER if I can’t make a perfect pair of shoes?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="WitchL3/ChoicesBorder/ChoicesBox"]
margin_left = 25.0
margin_top = 50.0
margin_right = 132.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "“You can’t. You should probably give up.”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="WitchL3/ChoicesBorder/ChoicesBox"]
margin_left = 190.0
margin_top = 50.0
margin_right = 297.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "“You’re being too hard on yourself. Even if you can’t make a perfect pair, you can make a really, really good pair.”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="WitchL3/ChoicesBorder/ChoicesBox"]
margin_left = 18.0
margin_top = 52.0
margin_right = 20.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="WitchL3/ChoicesBorder/ChoicesBox"]
margin_left = 184.0
margin_top = 52.0
margin_right = 186.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_7UP_body_entered"]
[connection signal="about_to_show" from="WitchL1" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="WitchL1" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="about_to_show" from="WitchL2" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="WitchL2" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="about_to_show" from="WitchL3" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="WitchL3" to="." method="_on_PopupPanel_popup_hide"]
